# Emdemnn

./: CMakeLists.txt  CMakelists.txt  Doxyfile  README.md  Report.docx  UML Diagram.dia  UML Diagram.dia~
sources/shaders/: shader.txt
src/Emdemnn/: Camera.cpp  Camera.h  Component.cpp  Component.h  Core.cpp  Core.h  Emdemnn.h  Entity.cpp  Entity.h  Exception.cpp  Exception.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Model.cpp  Model.h  NonCopyable.h  Rend.h  Resource.cpp  Resource.h  Resources.cpp  Resources.h  Sound.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h
src/fb/: MeshRenderer.h  Shader.h  Sound.cpp  SoundSource.cpp  Texture.h
src/sandbox/: TestScreen.cpp  TestScreen.h  main.cpp
src/trash/: SoundSource.h  TriangleRenderer.cpp  TriangleRenderer.h
win32/share/demo/: shader.txt
